<resources>
    <string name="app_name">BoshraApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="department">الاقسام</string>
    <string name="doctors">اطبائنا</string>
    <string name="more">المزيد</string>
    <string name="mainpage">الرئيسية</string>
    <string name="myreservation">حجوزاتي</string>
    <string name="videos">فيديوهات</string>
    <string name="images">الصور</string>
    <string name="connection_error">تأكد من اتصالك بالانترنت</string>
    <string name="loading">جارى التحميل</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="reserve">حجز</string>
    <string name="sehs">صحة المرأة</string>
    <string name="newhappy">فرحة جديدة</string>
    <string name="boshraactivity">فعاليات البشري</string>
    <string name="send">ارسل تفسيرك هنا..</string>
    <string name="notexists">هذا الرقم غير مسجل علي هاتفك يجب تسجيله اولا لامكانية الدردشة علي الواتساب</string>
    <string name="boshraname">مجمع البشري الطبي</string>
    <string name="contactadd">تم اضافة جهة الاتصال</string>
    <string name="Cancelled">تم الغاء الاضافة</string>
    <string name="like">لايك -</string>
    <string name="comment">تعليق -</string>
    <string name="share">مشاركة</string>
    <string name="myexp">تجربتي</string>
    <string name="getimages">تحديد الصور</string>
    <string name="writeexp">اكتب تجربتك مع مجمع البشري</string>
    <string name="add">اضف تجربتك</string>
    <string name="title_activity_add_exp">صفحة اضافة تجربة </string>
    <string name="notselect">لم يتم تحديد الصور</string>
    <string name="error">حدث خطأ في تحميل الصور حاول مره اخري</string>
    <string name="cancel">cancel</string>
    <string name="open_permission">open_permission</string>
    <string name="permission_text_cam">permission_text_cam</string>
    <string name="nodoctorsfound">لا يوجد اي اطباء بهذا القسم</string>
    <string name="name">الاسم</string>
    <string name="date">التاريخ</string>
    <string name="phone">الهاتف</string>


    <string name="saturday">السبت</string>
    <string name="sunday">الأحد</string>
    <string name="monday">الإثنين</string>
    <string name="tuesday">الثلاثاء</string>
    <string name="wednesday">الأربعاء</string>
    <string name="thursday">الخميس</string>
    <string name="friday">الجمعة</string>

    <string name="January">يناير</string>
    <string name="February">فبراير</string>
    <string name="March">مارس</string>
    <string name="April">أبريل</string>
    <string name="May">مايو</string>
    <string name="June">يونيو</string>
    <string name="July">يوليو</string>
    <string name="August">أغسطس</string>
    <string name="September">سبتمبر</string>
    <string name="October">أكتوبر</string>
    <string name="November">نوفمبر</string>
    <string name="December">ديسمبر</string>
    <string name="addsuccess">تم اضافة تجربتك بنجاح</string>
    <string name="username">اسم المستخدم</string>
    <string name="login">تسجيل الدخول</string>
    <string name="register">التسجيل</string>
    <string name="password">كلمة المرور</string>
    <string name="menu_profile">حسابي</string>
    <string name="medicalsub">مواضيع  طبية</string>
    <string name="boshraexp">تجارب بشري</string>
    <string name="reservdate">تاريخ الحجز</string>
    <string name="views"> مشاهدة</string>
    <string name="complete">من فضلك تاكد من استكمال بياناتك</string>
    <string name="aleadytoken">اسم المستخدم محجوز من قبل</string>
    <string name="something_wrong">حدث خطا الرجاء المحاولة مره اخري</string>
    <string name="registersuccess">تم التسجيل بنجاح</string>
    <string name="menlogout">تسجيل الخروج</string>
    <string name="userorpasserror">اسم المستخدم او كلمة المرور غير صحيحة</string>
    <string name="loginsucess">تم تسجيل الدخول بنجاح</string>
    <string name="mobile">رقم المحمول</string>
    <string name="mobileispass">.رقم الموبايل هو كلمة المرور</string>
    <string name="loginfirst">قم بتسجيل الدخول اولا</string>
    <string name="reservesuccess">تم اتمام الحجز بنجاح</string>
    <string name="arabic">العريية</string>
    <string name="eng">English</string>
    <string name="menu_language">اللغة</string>

    <string name="arabic_change">تم تغيير اللغة إلى اللغة العربية</string>
    <string name="eng_change">Language has been changed to english</string>
    <string name="already_arabic">انت بالفعل تستخدم اللغة العربية</string>
    <string name="already_eng">You are already using english language</string>
    <string name="readmore">قراءة المزيد ...</string>
    <string name="readless">قراءة اقل</string>
    <string name="loged_out">تم تسجيل خروجك</string>
    <string name="save">حفظ</string>
    <string name="editsucess">تم التعديل بنجاح</string>
    <string name="not_found_welcome">أهلا بك في مجمع البشري</string>
    <string name="not_found">لا يوجد اي حجوزات خاصة بك</string>
    <string name="nofb">الفيس غير متوفر لهذا الطبيب</string>
    <string name="nowhts">خاصية الواتس غير مفعلة لهذا الطبيب</string>
    <string name="accept">قبول</string>

</resources>
