<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.hossam.boshraapp.AddExpActivity"
    tools:showIn="@layout/activity_add_exp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        android:padding="5dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/titles"
            android:layout_width="match_parent"
            android:padding="5dp"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/title"
            android:orientation="horizontal"
            >

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/userimage"
                android:src="@drawable/doctor1"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                />

            <EditText
                android:id="@+id/post"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/writeexp"
                android:background="@drawable/editback"
                android:layout_gravity="center_vertical"
                app:layout_constraintRight_toRightOf="@+id/favoritedoctor_image"
                />

        </LinearLayout>

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/titles"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="3dp"
            android:layout_marginRight="10dp"
            android:textColor="#9B9B9B"
            tools:ignore="NotSibling" />
        <GridView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:id="@+id/gv"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/description"
            android:numColumns="1">

        </GridView>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/images_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layoutDirection="locale"
            android:orientation="horizontal"
            app:layoutManager="LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@+id/description" />

        <LinearLayout
            android:id="@+id/counters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:weightSum="2"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/images_recycler"

            >

            <Button
                android:id="@+id/btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="5dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/btn_border"
                android:text="@string/getimages"
                />

            <Button
                android:id="@+id/addpost"
                android:padding="10dp"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_border"
                android:text="@string/add"/>

        </LinearLayout>
    </LinearLayout>



</android.support.constraint.ConstraintLayout>
