<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    android:background="#E6EAED"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <android.support.v7.widget.CardView
        app:cardCornerRadius="18dp"
        android:layout_margin="5dp"
        android:layout_marginTop="10dp"

        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:cardBackgroundColor="@color/white">
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_marginBottom="10dp"
           >

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/doctor_image"
                android:src="@drawable/doctor1"
                android:scaleType="fitXY"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/doctor_image"
                android:text="دكتور سالم"
                android:layout_marginTop="18dp"
                android:layout_marginRight="10dp"
                android:textColor="#9B9B9B"
                android:layout_marginStart="5dp"
                android:textSize="16dp"
                android:id="@+id/name"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:padding="10dp"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                >


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:layout_marginStart="7dp"
                android:orientation="vertical"
                android:padding="5dp"
                app:layout_constraintStart_toEndOf="@+id/doctor_image"
                app:layout_constraintTop_toBottomOf="@+id/name">


                <TextView
                    android:id="@+id/specialist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="الدرجة العلمية" />

                <RatingBar
                    android:id="@+id/rates"
                    style="@style/StarRatingBars"

                    android:layout_width="wrap_content"
                    android:layout_height="29dp"
                    android:rating="5" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/doctor_image"
                app:layout_constraintEnd_toStartOf="parent"
                android:orientation="horizontal"
                android:layout_marginBottom="15dp"
                >
                <ImageView
                    android:id="@+id/face"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:padding="7dp"
                    android:layout_weight="1"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/facebook"
                    android:layout_marginEnd="10dp" />

                <ImageView

                    android:id="@+id/whats"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:padding="7dp"
                    android:scaleType="fitXY"
                    android:layout_weight="1"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/whats"
                    android:layout_marginEnd="10dp" />
            </LinearLayout>

        </android.support.constraint.ConstraintLayout>


    </android.support.v7.widget.CardView>

    <EditText
        android:id="@+id/uname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="15dp"
        android:hint="@string/name"
        android:gravity="center"
        android:layout_marginStart="20dp"
        android:background="@drawable/border_in_reserve"
        />
    <EditText
        android:id="@+id/reservedate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:hint="@string/date"
        android:layout_marginStart="20dp"
        android:background="@drawable/border_in_reserve"
        />
    <EditText
        android:id="@+id/mobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:gravity="center"
        android:hint="@string/phone"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/border_in_reserve"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/doctor_image"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="15dp"
        >

        <TextView
            android:id="@+id/reserve"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/reserve"
            android:gravity="center"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:background="@drawable/reserve_back"
            android:textSize="16dp"
            android:padding="10dp"
            android:textColor="@color/white"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="10dp"
            />
    </LinearLayout>

    </LinearLayout>
    </ScrollView>
</LinearLayout>
